# duo-xdp-rust

./: Cargo.toml  LICENSE  Makefile.toml  README.md
src/: main.rs
src/xdp/: drop_isn.rs  redirect.rs
